# MLOps_XOXO

./: .dockerignore  .gitignore  .pylintrc  Makefile  README copy.md  README.md  app.py  data_ingestion.py  data_ingestion_kaggle.py  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  main.py  mlflow_run_id.txt  params.yaml  prometheus.yml  pyproject.toml  test.py
.dvc/: config
.github/workflows/: CD-deploy.yaml  CD-train copy.yaml  CD-train.yaml  CI-action.yaml  README.md  ci-1-actionyaml  ci-2-action.yaml  ci-action.yaml  ci-connect-pull-dvc.yaml  example.txt
MLOps_XOXO/: Makefile  main.py  pyproject.toml
age_gender/: data_ingest.py  data_split.py  data_validate.py  dataset_card.md  eval.py  model_card.md  test.py  train.py  train_genderage_native.py
api/: api.py  requirements.txt
data/: external.dvc
docker/: Dockerfile  Dockerfile.api  Dockerfile.ci  Dockerfile.cuda  Dockerfile.ui  README.html  README.md  entrypoint.sh
docs/: .gitignore  data_validation_report.txt
docs/cards/: dataset-card.md  model-card.md
docs/emotion/: data_validation_report.txt
docs/emotion_classification/: data_validation_report.txt
mlops_xoxo/: data_ingest.py  data_split.py  data_validate.py  eval.py  register_model.py  test.py  test_nested_mlflow.py  train.py
mlops_xoxo/age_gender/: config.py  data_ingest.py  data_split.py  data_validate.py  eval.py  model.py  prepare_utkface.py  test.py  train.py
mlops_xoxo/api/: .gitignore  api.py.dvc  schemas.py.dvc
mlops_xoxo/core/: .gitignore  yolo_cam.py.dvc
mlops_xoxo/emotion_classification/: data_ingest.py  data_split.py  data_validate.py  eval.py  train.py  train_util.py
mlops_xoxo/face_embedding/: data_ingest.py  data_split.py  data_validate.py  eval.py  train.py  train_CD.py  train_util.py
mlops_xoxo/fake-classification-model/: README_AI_Fake_Classification.md  data_preprocess.py  data_split.py  train_model.py
mlops_xoxo/fake_classification/: eval.py  (+5 more)
model_monitoring/: create_ref_data.py  debug_evidently.py  drift.py  drift_report.py  prediction_logs.csv  reference_data.csv
models/: data_ingest.py  eval_model.py
reports/: .gitignore  emissions.csv  tests-report.xml
test_face_embedding/: conftest.py  test_api.py  test_data_ingest.py  test_data_utils.py  test_model.py  test_train.py
tests/: test_data_ingest.py  test_data_split.py  test_data_utils.py  test_data_validate.py  test_model.py  test_register_model.py  test_train.py
tests_face_embedding/: test_data_ingest.py  test_data_split.py  test_data_validate.py  test_model.py
(+56 files in other folders)
