[project]
name = "mlops-xoxo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.63.0",
    "mlflow<3.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "torch",
    "torchvision",
    "facenet-pytorch",
    "mlflow",
    "dvc",
    "opencv-python",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "tqdm",
    "pillow",
    "seaborn",
    "pyarrow",
    "pyyaml",
    "dotenv",
    "codecarbon>=3.0.5",
    "onnx>=1.14.0",
    "onnx2pytorch>=0.2.0",
    "onnxruntime>=1.15.0",
    "pylint>=3.3.8",
    "flake8>=7.3.0",
    "pytest-mock>=3.15.1",
    "transformers",
    "pillow",
    "ultralytics",
    "opencv-python",
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.36.0",
    "loguru>=0.7.3",
    "python-multipart>=0.0.6",
    "streamlit>=1.51.0",
    "requests>=2.32.5",
    "httpx",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = "--junitxml=reports/tests-report.xml --cov=mlops_xoxo --cov-report=html:reports/coverage"

[tool.coverage.run]
omit = [
    "mlops_xoxo/test.py",
    "mlops_xoxo/test_nested_mlflow.py",
]
